modified:   css/style.css 	modified:   index.html 	modified:   js/script.js     проба адаптации

--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumenix</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Eczar:wght@400..800&family=Goblin+One&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&display=swap');
-    </style>
     <link rel="shortcut icon" type="image/x-icon" href="../img/tabico.png" />
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Didact+Gothic&family=Eczar:wght@400..800&family=Forum&family=Funnel+Display:wght@300..800&family=Goblin+One&family=League+Spartan:wght@100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Syne:wght@400..800&display=swap" rel="stylesheet">
 <body>
     <nav>
         <div id="left-nav">
             <div id="logo">     
                 <img src="../img/logo2.png" alt="">       
             </div>
+            <!-- Добавить внутри nav, после #logo -->
+            <div class="burger-menu">
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+            </div>
+
+            <div class="mobile-menu">
+                <a href="mailto:lumenix@gmail.com">lumenix@gmail.com</a>
+                <a href="tel:+48123456789">+48 123 456 789</a>
+                <a href="#uslugi">Usługi</a>
+                <a href="#projekty">Projekty</a>
+            </div>
+            <!-- burger menu -->
             <div id="contact">
                 <ul class="contact-nav">
                     <li>
