modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="rgb(22, 22, 24)">
     <title>Lumenix</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -14,8 +14,8 @@
 <body>
     <nav>
         <div id="left-nav">
-            <div id="logo">     
-                <img src="../img/logo2.png" alt="">       
+            <div id="logo">  
+                <img src="../img/logo2.png" alt=""> 
             </div>
             <!-- Добавить внутри nav, после #logo -->
             <div class="burger-menu">
