modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -347,8 +347,58 @@
             <button><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z"/></svg></button>
         </div>
 
-        <div id="footer-info">
-            <h2>Luminex<br>Tworzymy światło<br>które inspiruje</h2>
+<div class="footer-container">
+            <div class="footer-content">
+                <!-- Company Info -->
+                <div>
+                    <h2>Luminex<br>Tworzymy światło<br>które inspiruje</h2>
+                </div>
+
+                <!-- Quick Links -->
+                <div class="footer-column">
+                    <h3>Strony</h3>
+                    <div class="footer-links">
+                        <a href="#">Strona główna</a>
+                        <a href="#">O nas</a>
+                        <a href="#">Produkty</a>
+                        <a href="#">Realizacje</a>
+                    </div>
+                </div>
+
+                <!-- Services -->
+                <div class="footer-column">
+                    <h3>Usługi</h3>
+                    <div class="footer-links">
+                        <a href="#">Projektowanie</a>
+                        <a href="#">Konsultacje</a>
+                        <a href="#">Instalacja</a>
+                        <a href="#">Serwis</a>
+                    </div>
+                </div>
+
+                <!-- Contact -->
+                <div class="footer-column">
+                    <h3>Kontakt</h3>
+                    <div class="footer-links">
+                        <a href="tel:+48123456789">+48 123 456 789</a>
+                        <a href="mailto:biuro@luminex.pl">biuro@luminex.pl</a>
+                        <a href="#">ul. Świetlna 15<br>00-001 Warszawa</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bottom Section -->
+            <div class="footer-bottom">
+                <div class="footer-newsletter">
+                    <input type="email" placeholder="Twój adres email" />
+                    <button>Subskrybuj</button>
+                </div>
+                <div class="footer-social">
+                    <a href="#" data-feather="instagram"></a>
+                    <a href="#" data-feather="linkedin"></a>
+                    <a href="#" data-feather="facebook"></a>
+                </div>
+            </div>
         </div>
       </footer>
     <script src="../js/script.js"></script>
