modified:   css/style.css 	modified:   index.html 	modified:   js/script.js

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="footer-content">
                 <!-- Company Info -->
                 <div>
-                    <h2>Luminex<br>Tworzymy światło<br>które inspiruje</h2>
+                    <h2><span>Luminex</span><br>Tworzymy światło<br>które inspiruje</h2>
                 </div>
 
                 <!-- Quick Links -->
