modified:   css/style.css 	new file:   img/background1.gif 	new file:   img/background4.gif 	new file:   img/background5.gif 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Didact+Gothic&family=Eczar:wght@400..800&family=Forum&family=Funnel+Display:wght@300..800&family=Goblin+One&family=League+Spartan:wght@100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Syne:wght@400..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
 </head>  
 <body>
@@ -28,15 +30,16 @@
                         <button id="uslugi-button">Usługi</button>
                     </a>
                 </li>
-                <li>
-                    <a href="#section-4">
-                        <button id="uslugi-button">TEST</button>
-                    </a>
-                </li>
                 <li>/</li>
                 <li>
                     <a href="#section-3">
                         <button id="projekty-button">Projekty</button>
+                    </a>
+                </li>
+                <li>/</li>
+                <li>
+                    <a href="#section-4">
+                        <button id="uslugi-button">Opinii</button>
                     </a>
                 </li>
                 <li></li>
