--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
 </head>  
 <body>
+
     <nav>
         <div id="left-nav">
             <div id="logo">  
@@ -50,7 +51,7 @@
     
     <section id="section-1">
         
-        <div #text-s1>
+        <div id="text-s">
             <div class="text1-s1">
                 <p id="p-light">Rozświetlamy</p> 
                 <p id="p-text">Twoje pomysły</p>
@@ -397,9 +398,15 @@
                     <button>Subskrybuj</button>
                 </div>
                 <div class="footer-social">
-                    <a href="#" data-feather="instagram"></a>
-                    <a href="#" data-feather="linkedin"></a>
-                    <a href="#" data-feather="facebook"></a>
+                    <a href="#" data-feather="instagram">
+                        <img src="../img/social/instagram.png" alt="">
+                    </a>
+                    <a href="#" data-feather="linkedin">
+                        <img src="../img/social/linkedin.png" alt="">
+                    </a>
+                    <a href="#" data-feather="facebook">
+                        <img src="../img/social/facebook.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
