сайдбар на контакт смена футера

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
 </head>  
 <body>
+    <div id="logo">  
+        <img src="../img/logo2.png" alt=""> 
+    </div>
 
     <nav id="nav">
         <div id="left-nav">
-            <div id="logo">  
-                <img src="../img/logo2.png" alt=""> 
-            </div>
             
         </div>
         <div id="right-nav">
@@ -355,7 +355,7 @@
             <div class="footer-content">
                 <!-- Company Info -->
                 <div>
-                    <h2><span>Luminex</span><br>Tworzymy światło<br>które inspiruje</h2>
+                    <h2><br>Tworzymy <span>światło</span><br>które inspiruje</h2>
                 </div>
 
                 <!-- Quick Links -->
