modified:   css/style.css 	modified:   index.html 	modified:   js/script.js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li></li>
-                <li><button id="contact-button">Kontakt z nami <span id="span-arrow">→</span></button></li>
+                <li><button id="contact-button" onclick="toggleSidebar()">Kontakt z nami <span id="span-arrow">→</span></button></li>
             </ul>
         </div>
     </nav>
@@ -226,7 +226,6 @@
                 </div>
             </div>
         </div>
-        <button id="project-more">Zobacz więcej <span id="span-arrow">→</span></button>
     </section>
     <section id="section-4">
         <h2 class="title">Co mówią o nas klienci</h2>
@@ -292,7 +291,6 @@
                 </div>
             </div>
         </div>
-            <button id="client-more">Więcej opinii <span id="span-arrow">→</span></button>
     </section>
     <section id="section-5">
         <h2 class="title">Nasi partnerzy</h2>
